src/styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* ======= APP STYLES ============ */

.App {
  font-family: sans-serif;
  padding: 2em;
  background-color: white;
  max-width: 800px;
  margin: 0 auto;
}

.minimize {
  display: none;
}

.blue {
  color: #457b9d;
}

.red {
  color: #e63946;
}

.orange {
  color: #e76f51;
}

.gray {
  color: #495057;
}

.subelement {
  width: auto;
  cursor: pointer;
}

.subelement:hover {
  background: lightgray;
}

.indent {
  margin-left: 3em;
}

.border-left {
  border-left: 1px solid lightgray;
}

.tree {
  font-family: monospace;
}

body {
  background: #f1f1f1;
}

/* input {
  border: 1px solid #aaaaaa;
  padding: 0.5em;
  margin-left: 1em;
  border-radius: 0.5em;
} */

button {
  outline: none;
  border: none;
  background-color: #fff;
  cursor: pointer;
  margin: 0;
  padding: 0 0.2em 0 0;
}

